--- a/001_The_Zen_of_Python.ipynb
+++ b/001_The_Zen_of_Python.ipynb
@@ -6,7 +6,7 @@
       "name": "001 - The Zen of Python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMIVozI9qwjXZD3L/AODsVC",
+      "authorship_tag": "ABX9TyN7kJg0dpe3+70QBgmRVUi1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,15 +81,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        ""
+        "https://www.python.org/dev/peps/pep-0020/"
       ],
       "metadata": {
-        "id": "Qufd0XfjcQtS"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "FpPFtfXwc2Mr"
+      }
     }
   ]
 }
